# llm001

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
MyInfer/: CMakeLists.txt
MyInfer/cmake/: CPM.cmake
MyInfer/kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
MyInfer/kuiper/include/op/: layer.h
MyInfer/kuiper/include/tensor/: tensor.h
MyInfer/kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
MyInfer/kuiper/source/op/: layer.cpp
MyInfer/kuiper/source/tensor/: tensor.cpp
MyInfer/test/: CMakeLists.txt  test_main.cpp
MyInfer/test/optimized/: test_allocator.cpp
ai-compiler/mlir/learn-doc/: LLVM ADT数据结构.md  MemRef Dialect.md  pass管理.md
ai-compiler/mlir/mlir-learn/: README.md
ai-compiler/mlir/mlir-learn/mlir-toy/: .clangd  CMakeLists.txt  main.cpp
ai-compiler/mlir/mlir-learn/mlir-toy/include/Dialect/Lumina/IR/: CMakeLists.txt  LuminaAttrs.h  LuminaAttrs.td  LuminaConstraints.td  LuminaDialect.h  LuminaDialect.td  LuminaEnums.h  LuminaEnums.td  LuminaOps.h  LuminaOps.td  LuminaTypes.h  LuminaTypes.td
ai-compiler/mlir/mlir-learn/mlir-toy/include/Dialect/Lumina/Transforms/: CMakeLists.txt  Passes.h  Passes.td
ai-compiler/mlir/mlir-learn/mlir-toy/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td  FusionRegionInterfaces.h  FusionRegionInterfaces.td
ai-compiler/mlir/mlir-learn/mlir-toy/include/Utils/: File.h  Key.h
ai-compiler/mlir/mlir-learn/mlir-toy/src/: CMakeLists.txt
ai-compiler/mlir/mlir-learn/mlir-toy/src/Dialect/Lumina/IR/: CMakeLists.txt  LuminaAttrs.cpp  LuminaDialect.cpp  LuminaOps.cpp  LuminaTypes.cpp
ai-compiler/mlir/mlir-learn/mlir-toy/src/Dialect/Lumina/Transforms/: ApplyDistributeTransform.cpp  CMakeLists.txt  DeviceRegionFusion.cpp  MarkDistributeParallelParameters.cpp
ai-compiler/mlir/mlir-learn/mlir-toy/src/Interfaces/:  DistributeParallelismInterfaces.cpp  CMakeLists.txt  DistributeParallelismInterfaces.cpp  FusionRegionInterfaces.cpp
ai-compiler/mlir/mlir-learn/mlir-toy/src/Utils/: CMakeLists.txt  File.cpp
ai-compiler/torch-compile/: 整体视图.md  编译管线.md
inference/: 性能指标.md
models/GQA/: GQA.md  GQA.py
models/Qwen/Qwen3-Dense/: Architecture.md
review/: Roofline模型.md
transformer/: model.py
